--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,10 @@
     <meta name="viewport" content="width=device-width">
 
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css({.tmp,app}) styles/main.css -->
+    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
 </head>
 <body ng-app="Skeleton">
 <!--[if lt IE 7]>
@@ -30,24 +27,6 @@
 
 <!-- Add your site or application content here -->
 <div class="container" ng-view=""></div>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');
-</script>
 
 <!--[if lt IE 9]>
 <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -67,13 +46,12 @@
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
+<!-- build:js scripts/scripts.js -->
 <script src="app.js"></script>
 <script src="components/fractalDragon/fractal-dragon-controller.js"></script>
 <script src="components/fractal-drawing-service.js"></script>
 <script src="components/fractalDragon/fractal-dragon-directive.js"></script>
 <!-- endbuild -->
-
 
 </body>
 </html>
